--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "The vanilla-secure will help you to create and check secure tokens.",
 
     "require": {
-        "rentalhost/vanilla-result": "^1.0"
+        "rentalhost/vanilla-result": "<0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7"
@@ -15,9 +15,11 @@
         }
     },
 
-    "authors": [{
-        "name": "David Rodrigues",
-        "email": "david.rodrigues@rentalhost.net"
-    }],
+    "authors": [
+        {
+            "name": "David Rodrigues",
+            "email": "david.rodrigues@rentalhost.net"
+        }
+    ],
     "license": "MIT"
 }
