--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
         "rentalhost/vanilla-result": "<0.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "phpunit/phpunit": "^4.8"
     },
 
     "autoload": {
         "psr-4": {
             "Rentalhost\\VanillaSecure\\": "src/VanillaSecure/"
         }
+    },
+
+    "scripts": {
+        "test": "phpunit",
+        "coverage": "phpunit --coverage-html=coverage"
     },
 
     "authors": [
